前后端分离的gis代码提交

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<version>${fastjson.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.livesense</groupId>
+			<artifactId>org.liveSense.fragment.sun.misc</artifactId>
+			<version>1.0.5</version>
+		</dependency>
 
 	</dependencies>
 
